@@ -17,7 +17,6 @@
 package org.apache.camel.tooling.model;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
@@ -45,7 +44,7 @@ public final class JsonMapper {
 
     public static BaseModel<?> generateModel(Path file) {
         try {
-            String json = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+            String json = Files.readString(file);
             return generateModel(json);
         } catch (IOException e) {
             throw new RuntimeException("Error reading json file: " + file, e);
@@ -388,6 +387,23 @@ public final class JsonMapper {
         model.setTo(mobj.getString("to"));
         parseArtifact(mobj, model);
         return model;
+    }
+
+    public static String createParameterJsonSchema(TransformerModel model) {
+        JsonObject wrapper = asJsonObject(model);
+        return serialize(wrapper);
+    }
+
+    public static JsonObject asJsonObject(TransformerModel model) {
+        JsonObject obj = new JsonObject();
+        baseToJson(model, obj);
+        artifactToJson(model, obj);
+        obj.put("from", model.getFrom());
+        obj.put("to", model.getTo());
+        obj.entrySet().removeIf(e -> e.getValue() == null);
+        JsonObject wrapper = new JsonObject();
+        wrapper.put("transformer", obj);
+        return wrapper;
     }
 
     public static OtherModel generateOtherModel(String json) {
